--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 * {
     box-sizing: border-box;
 }
 
 :root {
-    --primary: #eeb50a;
+    --primary: #ffd55e;
     --black: #333333;
-    --width-break:600px
+    --width-break: 600px
 }
 
 body {
     margin: 0;
-    font-family: 'Architects Daughter', cursive;
+    font-family: 'Montserrat', sans-serif;
     color: #333333;
 }
 
@@ -42,17 +41,22 @@ button {
     border: none;
     margin: 1rem 0rem;
     padding: 1rem 2rem;
+    border-radius: 5px;
     font-family: 'Kalam', cursive;
     font-size: large;
 }
 
+button:hover {
+    background-color: #0c457a;
+    color: white;
+}
 
 #translate-output {
     box-sizing: border-box;
     width: 100%;
     min-height: 10vh;
     max-height: 20vh;
-    overflow:scroll;
+    overflow: scroll;
     border: 1px solid var(--black);
 }
 
